--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,16 @@
       <artifactId>spark-sql_2.12</artifactId>
       <version>3.0.0</version>
     </dependency>
+    <dependency>
+      <groupId>com.datastax.cassandra</groupId>
+      <artifactId>cassandra-driver-core</artifactId>
+      <version>3.11.0</version>
+    </dependency>
+    <dependency>
+      <groupId>io.dropwizard.metrics</groupId>
+      <artifactId>metrics-jmx</artifactId>
+      <version>4.0.2</version>
+    </dependency>
   </dependencies>
 
   <build>
